Merged revisions 21880,21885,21887,21889,21893 via svnmerge from https://www.dev.java.net/svn/hudson/branches/rc
........
  r21880 | kohsuke | 2009-09-18 16:37:04 -0700 (Fri, 18 Sep 2009) | 1 line
  
  need a new version to authenticate with Wiki
........
  r21885 | kohsuke | 2009-09-18 18:35:46 -0700 (Fri, 18 Sep 2009) | 1 line
  
  tests are starting to fail with PermGen problem
........
  r21887 | kohsuke | 2009-09-18 18:52:20 -0700 (Fri, 18 Sep 2009) | 1 line
  
  [maven-release-plugin] prepare release hudson-1_324
........
  r21889 | kohsuke | 2009-09-18 18:52:36 -0700 (Fri, 18 Sep 2009) | 1 line
  
  [maven-release-plugin] prepare for next development iteration
........
  r21893 | kohsuke | 2009-09-18 19:26:06 -0700 (Fri, 18 Sep 2009) | 1 line
  
  updated changelog as a part of the release
........


git-svn-id: https://hudson.dev.java.net/svn/hudson/trunk/hudson/main@21897 71c3de6d-444a-0410-be80-ed276b4c234a